# optimizer

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  analyse_trajectoire.html  analyse_trajectoire_1.html  config.yaml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0001_trajectoires.py  0002_trajectoire_pas_refactor.py  0003_rename_soc_to_soe.py
docker/: Dockerfile  docker-compose.yml
scripts/: README.md  analyse_optimisation.yaml  analyse_trajectoire.py
src/optimizer/: config.py  exceptions.py  main.py
src/optimizer/api/: auth.py  routes.py  schemas.py
src/optimizer/db/: models.py  readers.py  session.py  writers.py
src/optimizer/optimizer/: solver.py  types.py
src/optimizer/pipeline/: drift.py  optimize.py
tests/: conftest.py
tests/api/: test_routes.py
tests/db/: test_readers.py  test_writers.py
tests/optimizer/: test_solver.py
tests/pipeline/: test_drift.py  test_optimize.py
